load and save weight part II

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ set(_src
  src/main.cpp
  src/SampleWriter.cpp
  src/ObjectTracker.cpp
- fnnlib.hpp
+ rnnlib/rnnlib.hpp
 )
 #---------------------------------------------------------
 
