Learning multiple patterns by PB

--- a/build-naosdk_toolchain/Nao_AdaptiveMotion.cbp
+++ b/build-naosdk_toolchain/Nao_AdaptiveMotion.cbp
@@ -198,6 +198,8 @@
       </Unit>
       <Unit filename="/home/christian/BachelorProject/Mainline/include/ObjectTracker.hpp">
       </Unit>
+      <Unit filename="/home/christian/BachelorProject/Mainline/include/OniSampleUtilities.hpp">
+      </Unit>
       <Unit filename="/home/christian/BachelorProject/Mainline/include/SampleWriter.hpp">
       </Unit>
       <Unit filename="/home/christian/BachelorProject/Mainline/include/UserSkeleton.hpp">
