--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(OpenCV REQUIRED )
 project(Nao_AdaptiveMotion)
 # This include enable you to use our CMake framework
 find_package(qibuild)
-find_package(OpenGL REQUIRED)
+#find_package(OpenGL REQUIRED)
 find_package(LAPACK REQUIRED)
 
 LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
@@ -68,8 +68,8 @@ qi_use_lib(Nao_AdaptiveMotion ALCOMMON ALPROXIES)
 target_link_libraries(Nao_AdaptiveMotion libOpenNI2.so)
 target_link_libraries(Nao_AdaptiveMotion libNiTE2.so)
 target_link_libraries(Nao_AdaptiveMotion ${OPENGL_LIBRARIES})
-target_link_libraries(Nao_AdaptiveMotion libGLEW.so)
-target_link_libraries(Nao_AdaptiveMotion libglut.so )
+#target_link_libraries(Nao_AdaptiveMotion libGLEW.so)
+#target_link_libraries(Nao_AdaptiveMotion libglut.so )
 target_link_libraries(Nao_AdaptiveMotion ${ARMADILLO_LIBRARIES})
 target_link_libraries(Nao_AdaptiveMotion ${LAPACK_LIBRARIES})
 
